Fix github link appearing behind spinner

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,6 +44,7 @@ body {
     display: flex;
     justify-content: center;
     font-size: 2em;
+    z-index: 10;
 }
 
 .link {
